include ../common.make

rules_sources =  \
	AvoidAssemblyVersionMismatchRule.cs \
	AvoidCallingProblematicMethodsRule.cs \
	AvoidVisibleConstantFieldRule.cs \
	CheckNewExceptionWithoutThrowingRule.cs \
	CheckNewThreadWithoutStartRule.cs \
	CloneMethodShouldNotReturnNullRule.cs \
	ConstructorShouldNotCallVirtualMethodsRule.cs \
	DisableDebuggingCodeRule.cs \
	DoNotForgetNotImplementedMethodsRule.cs \
	DoNotUseGetInterfaceToCheckAssignabilityRule.cs \
	EqualShouldHandleNullArgRule.cs \
	GetEntryAssemblyMayReturnNullRule.cs \
	ObsoleteMessagesShouldNotBeEmptyRule.cs \
	PreferEmptyInstanceOverNullRule.cs \
	ReplaceIncompleteOddnessCheckRule.cs \
	ReturnNullRule.cs \
	ToStringReturnsNullRule.cs 

tests_sources = \
	AvoidAssemblyVersionMismatchTest.cs \
	AvoidVisibleConstantFieldTest.cs \
	AvoidCallingProblematicMethodsTest.cs \
	CheckNewExceptionWithoutThrowingTest.cs \
	CheckNewThreadWithoutStartTest.cs \
	CloneMethodShouldNotReturnNullTest.cs \
	ConstructorShouldNotCallVirtualMethodsTest.cs \
	DoNotForgetNotImplementedMethodsTest.cs \
	DoNotUseGetInterfaceToCheckAssignabilityTest.cs \
	DisableDebuggingCodeTest.cs \
	EqualShouldHandleNullArgTest.cs \
	GetEntryAssemblyMayReturnNullTest.cs \
	ObsoleteMessagesShouldNotBeEmptyTest.cs \
	PreferEmptyInstanceOverNullTest.cs \
	ReplaceIncompleteOddnessCheckTest.cs \
	ToStringReturnsNullTest.cs 
