include ../common.make

rules_sources =  \
	AvoidAssemblyVersionMismatchRule.cs \
	AvoidCallingProblematicMethodsRule.cs \
	AvoidVisibleConstantFieldRule.cs \
	CheckNewExceptionWithoutThrowingRule.cs \
	CheckNewThreadWithoutStartRule.cs \
	CloneMethodShouldNotReturnNullRule.cs \
	ConstructorShouldNotCallVirtualMethodsRule.cs \
	DisableDebuggingCodeRule.cs \
	DoNotForgetNotImplementedMethodsRule.cs \
	DoNotUseEnumIsAssignableFromRule.cs \
	DoNotUseGetInterfaceToCheckAssignabilityRule.cs \
	EqualShouldHandleNullArgRule.cs \
	GetEntryAssemblyMayReturnNullRule.cs \
	ObsoleteMessagesShouldNotBeEmptyRule.cs \
	OnlyUseDisposeForIDisposableTypesRule.cs \
	PreferEmptyInstanceOverNullRule.cs \
	PreferSafeHandleRule.cs \
	ReplaceIncompleteOddnessCheckRule.cs \
	ReturnNullRule.cs \
	ToStringReturnsNullRule.cs 

tests_sources = \
	AvoidAssemblyVersionMismatchTest.cs \
	AvoidVisibleConstantFieldTest.cs \
	AvoidCallingProblematicMethodsTest.cs \
	CheckNewExceptionWithoutThrowingTest.cs \
	CheckNewThreadWithoutStartTest.cs \
	CloneMethodShouldNotReturnNullTest.cs \
	ConstructorShouldNotCallVirtualMethodsTest.cs \
	DoNotForgetNotImplementedMethodsTest.cs \
	DoNotUseEnumIsAssignableFromTest.cs \
	DoNotUseGetInterfaceToCheckAssignabilityTest.cs \
	DisableDebuggingCodeTest.cs \
	EqualShouldHandleNullArgTest.cs \
	GetEntryAssemblyMayReturnNullTest.cs \
	ObsoleteMessagesShouldNotBeEmptyTest.cs \
	OnlyUseDisposeForIDisposableTypesTest.cs \
	PreferEmptyInstanceOverNullTest.cs \
	PreferSafeHandleTest.cs \
	ReplaceIncompleteOddnessCheckTest.cs \
	ToStringReturnsNullTest.cs 
