include ../common.make

rules_sources =  \
	AvoidAssemblyVersionMismatchRule.cs \
	AvoidCallingProblematicMethodsRule.cs \
	AvoidNullCheckWithAsOperatorRule.cs \
	AvoidVisibleConstantFieldRule.cs \
	CheckNewExceptionWithoutThrowingRule.cs \
	CheckNewThreadWithoutStartRule.cs \
	CloneMethodShouldNotReturnNullRule.cs \
	ConstructorShouldNotCallVirtualMethodsRule.cs \
	DisableDebuggingCodeRule.cs \
	DoNotDecreaseVisibilityRule.cs \
	DoNotForgetNotImplementedMethodsRule.cs \
	DoNotUseEnumIsAssignableFromRule.cs \
	DoNotUseGetInterfaceToCheckAssignabilityRule.cs \
	EqualShouldHandleNullArgRule.cs \
	GetEntryAssemblyMayReturnNullRule.cs \
	ObsoleteMessagesShouldNotBeEmptyRule.cs \
	OnlyUseDisposeForIDisposableTypesRule.cs \
	PreferEmptyInstanceOverNullRule.cs \
	PreferParamsArrayForVariableArgumentsRule.cs \
	PreferTryParseRule.cs \
	PreferSafeHandleRule.cs \
	ReplaceIncompleteOddnessCheckRule.cs \
	ReturnNullRule.cs \
	ToStringReturnsNullRule.cs \
	UseFileOpenOnlyWithFileAccessRule.cs

tests_sources = \
	AvoidAssemblyVersionMismatchTest.cs \
	AvoidCallingProblematicMethodsTest.cs \
	AvoidNullCheckWithAsOperatorTest.cs \
	AvoidVisibleConstantFieldTest.cs \
	CheckNewExceptionWithoutThrowingTest.cs \
	CheckNewThreadWithoutStartTest.cs \
	CloneMethodShouldNotReturnNullTest.cs \
	ConstructorShouldNotCallVirtualMethodsTest.cs \
	DoNotDecreaseVisibilityTest.cs \
	DoNotForgetNotImplementedMethodsTest.cs \
	DoNotUseEnumIsAssignableFromTest.cs \
	DoNotUseGetInterfaceToCheckAssignabilityTest.cs \
	DisableDebuggingCodeTest.cs \
	EqualShouldHandleNullArgTest.cs \
	GetEntryAssemblyMayReturnNullTest.cs \
	ObsoleteMessagesShouldNotBeEmptyTest.cs \
	OnlyUseDisposeForIDisposableTypesTest.cs \
	PreferEmptyInstanceOverNullTest.cs \
	PreferParamsArrayForVariableArgumentsTest.cs \
	PreferTryParseTest.cs \
	PreferSafeHandleTest.cs \
	ReplaceIncompleteOddnessCheckTest.cs \
	ToStringReturnsNullTest.cs \
	UseFileOpenOnlyWithFileAccessTest.cs
