include ../common.make

rules_sources =  \
	DoNotLockOnThisOrTypesRule.cs \
	DoNotLockOnWeakIdentityObjectsRule.cs \
	DoNotUseMethodImplOptionsSynchronizedRule.cs \
	DoNotUseThreadStaticWithInstanceFieldsRule.cs \
	DontUseLockedRegionOutsideMethodRule.cs \
	DoubleCheckLockingRule.cs \
	LockAnalyzerRule.cs \
	NonConstantStaticFieldsShouldNotBeVisibleRule.cs \
	ProtectCallToEventDelegatesRule.cs \
	ReviewLockUsedOnlyForOperationsOnVariablesRule.cs \
	WriteStaticFieldFromInstanceMethodRule.cs

tests_sources = \
	DoNotLockOnThisOrTypesTest.cs \
	DoNotLockOnWeakIdentityObjectsTest.cs \
	DoNotUseMethodImplOptionsSynchronizedTest.cs \
	DoNotUseThreadStaticWithInstanceFieldsTest.cs \
	DontUseLockedRegionOutsideMethodTest.cs \
	DoubleCheckLockingTest.cs \
	NonConstantStaticFieldsShouldNotBeVisibleTest.cs \
	ProtectCallToEventDelegatesTest.cs \
	ReviewLockUsedOnlyForOperationsOnVariablesTest.cs \
	WriteStaticFieldFromInstanceMethodTest.cs
