include ../common.make

rules_sources =  \
	DecorateThreadsRule.cs \
	DoNotLockOnThisOrTypesRule.cs \
	DoNotLockOnWeakIdentityObjectsRule.cs \
	DoNotUseMethodImplOptionsSynchronizedRule.cs \
	DoNotUseThreadStaticWithInstanceFieldsRule.cs \
	DontUseLockedRegionOutsideMethodRule.cs \
	DoubleCheckLockingRule.cs \
	LockAnalyzerRule.cs \
	NonConstantStaticFieldsShouldNotBeVisibleRule.cs \
	ProtectCallToEventDelegatesRule.cs \
	ReviewLockUsedOnlyForOperationsOnVariablesRule.cs \
	ThreadRocks.cs \
	WriteStaticFieldFromInstanceMethodRule.cs

tests_sources = \
	DecorateThreadsTest.cs \
	DoNotLockOnThisOrTypesTest.cs \
	DoNotLockOnWeakIdentityObjectsTest.cs \
	DoNotUseMethodImplOptionsSynchronizedTest.cs \
	DoNotUseThreadStaticWithInstanceFieldsTest.cs \
	DontUseLockedRegionOutsideMethodTest.cs \
	DoubleCheckLockingTest.cs \
	NonConstantStaticFieldsShouldNotBeVisibleTest.cs \
	ProtectCallToEventDelegatesTest.cs \
	ReviewLockUsedOnlyForOperationsOnVariablesTest.cs \
	WriteStaticFieldFromInstanceMethodTest.cs
