include ../common.make

rules_sources =  \
	AttributeStringLiteralsShouldParseCorrectlyRule.cs \
	AvoidConstructorsInStaticTypesRule.cs \
	AvoidFloatingPointEqualityRule.cs \
	DoNotRecurseInEqualityRule.cs \
	BadRecursiveInvocationRule.cs \
	CallingEqualsWithNullArgRule.cs \
	CheckParametersNullityInVisibleMethodsRule.cs \
	DisposableFieldsShouldBeDisposedRule.cs \
	DoNotRoundIntegersRule.cs \
	DontCompareWithNaNRule.cs \
	FinalizersShouldCallBaseClassFinalizerRule.cs \
	FloatComparisonRule.cs \
	ReviewInconsistentIdentityRule.cs \
	MethodCanBeMadeStaticRule.cs \
	ProvideCorrectArgumentsToFormattingMethodsRule.cs \
	ReviewCastOnIntegerDivisionRule.cs \
	ReviewCastOnIntegerMultiplicationRule.cs \
	ReviewDoubleAssignmentRule.cs \
	ReviewSelfAssignmentRule.cs \
	ReviewUselessControlFlowRule.cs \
	ReviewUseOfInt64BitsToDoubleRule.cs \
	ReviewUseOfModuloOneOnIntegersRule.cs \
	UseValueInPropertySetterRule.cs

tests_sources = \
	AvoidConstructorsInStaticTypesTest.cs \
	AvoidFloatingPointEqualityTest.cs \
	DoNotRecurseInEqualityTest.cs \
	BadRecursiveInvocationTest.cs \
	CallingEqualsWithNullArgTest.cs \
	CheckParametersNullityInVisibleMethodsTest.cs \
	DisposableFieldsShouldBeDisposedTest.cs \
	DontCompareWithNaNTest.cs \
	DoNotRoundIntegersTest.cs \
	FinalizersShouldCallBaseClassFinalizerTest.cs \
	ReviewInconsistentIdentityTest.cs \
	MethodCanBeMadeStaticTest.cs \
	ReviewCastOnIntegerDivisionTest.cs \
	ReviewCastOnIntegerMultiplicationTest.cs \
	ReviewDoubleAssignmentTest.cs \
	ReviewSelfAssignmentTest.cs \
	ReviewUselessControlFlowTest.cs \
	ReviewUseOfInt64BitsToDoubleTest.cs \
	ReviewUseOfModuloOneOnIntegersTest.cs \
	UseValueInPropertySetterTest.cs \
	ProvideCorrectArgumentsToFormattingMethodsTest.cs \
	AttributeStringLiteralsShouldParseCorrectlyTest.cs	
