include ../common.make
common_tests=../Test.Rules/Test.Rules.dll,System.Configuration

rules_sources =  \
	AttributeStringLiteralsShouldParseCorrectlyRule.cs \
	AvoidCodeWithSideEffectsInConditionalCodeRule.cs \
	AvoidConstructorsInStaticTypesRule.cs \
	AvoidFloatingPointEqualityRule.cs \
	AvoidMethodsWithSideEffectsInConditionalCodeRule.cs \
	DoNotRecurseInEqualityRule.cs \
	BadRecursiveInvocationRule.cs \
	CallingEqualsWithNullArgRule.cs \
	CheckParametersNullityInVisibleMethodsRule.cs \
	DisposableFieldsShouldBeDisposedRule.cs \
	DoNotRoundIntegersRule.cs \
	DontCompareWithNaNRule.cs \
	EnsureLocalDisposalRule.cs \
	FinalizersShouldCallBaseClassFinalizerRule.cs \
	FloatComparisonRule.cs \
	ReviewInconsistentIdentityRule.cs \
	MethodCanBeMadeStaticRule.cs \
	ProvideCorrectArgumentsToFormattingMethodsRule.cs \
	ProvideCorrectRegexPatternRule.cs \
	ProvideValidXmlStringRule.cs \
	ProvideValidXPathExpressionRule.cs \
	ReviewCastOnIntegerDivisionRule.cs \
	ReviewCastOnIntegerMultiplicationRule.cs \
	ReviewDoubleAssignmentRule.cs \
	ReviewSelfAssignmentRule.cs \
	ReviewUselessControlFlowRule.cs \
	ReviewUseOfInt64BitsToDoubleRule.cs \
	ReviewUseOfModuloOneOnIntegersRule.cs \
	UseNoInliningWithGetCallingAssemblyRule.cs \
	UseValueInPropertySetterRule.cs

EXTRA_TESTS_OPTIONS += -d:DEBUG

tests_sources = \
	AttributeStringLiteralsShouldParseCorrectlyTest.cs \
	AvoidCodeWithSideEffectsInConditionalCodeTest.cs \
	AvoidConstructorsInStaticTypesTest.cs \
	AvoidFloatingPointEqualityTest.cs \
	AvoidMethodsWithSideEffectsInConditionalCodeTest.cs \
	DoNotRecurseInEqualityTest.cs \
	BadRecursiveInvocationTest.cs \
	CallingEqualsWithNullArgTest.cs \
	CheckParametersNullityInVisibleMethodsTest.cs \
	DisposableFieldsShouldBeDisposedTest.cs \
	DontCompareWithNaNTest.cs \
	DoNotRoundIntegersTest.cs \
	EnsureLocalDisposalTest.cs \
	FinalizersShouldCallBaseClassFinalizerTest.cs \
	ReviewInconsistentIdentityTest.cs \
	MethodCanBeMadeStaticTest.cs \
	ProvideCorrectArgumentsToFormattingMethodsTest.cs \
	ProvideCorrectRegexPatternTest.cs \
	ProvideValidXmlStringTest.cs \
	ProvideValidXPathExpressionTest.cs \
	ReviewCastOnIntegerDivisionTest.cs \
	ReviewCastOnIntegerMultiplicationTest.cs \
	ReviewDoubleAssignmentTest.cs \
	ReviewSelfAssignmentTest.cs \
	ReviewUselessControlFlowTest.cs \
	ReviewUseOfInt64BitsToDoubleTest.cs \
	ReviewUseOfModuloOneOnIntegersTest.cs \
	UseNoInliningWithGetCallingAssemblyTest.cs \
	UseValueInPropertySetterTest.cs
